--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="onlyspace"></div>
     </div>
     <footer class="end">
-      <p class="m">Made By: Tavish Enterprises(Tavish Tayal)</p>
+      <p class="m">Made By: TechCorp(Tavish Tayal)</p>
       <p class="c">
         Contact Us:
         <a
