--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7578886708336265"
+     crossorigin="anonymous"></script>
     <meta
       name="description"
       content="Welcome to our Text-Analyzer which could help you by repairing your text in various forms so what are you waiting for ITS FREE!"
@@ -19,33 +21,50 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="index.css" />
+
   </head>
   <body>
     <div class="nav"><h1 class="text1">Text Analyzer</h1></div>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7578886708336265"
+     crossorigin="anonymous"></script>
+<!-- Text ads -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-7578886708336265"
+     data-ad-slot="9253455716"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     <div class="bapu">
-    <div class="intparent">
-      <input type="text" class="int" placeholder="Text Here" />
+      <div class="intparent">
+        <input type="text" class="int" placeholder="Text Here" />
+      </div>
+      <!-- <div class="note">Note! it also counts spaces</div> -->
+      <button class="btn" onclick="txt()">Submit</button>
+      <div class="alltxt">
+        <div class="show"></div>
+        <div class="showspace"></div>
+        <div class="onlyspace"></div>
+      </div>
+      <!-- <footer class="end"> -->
+      <!-- <p class="m">Made By: TechCorp(Tavish Tayal)</p>
+        <p class="c">
+          Contact Us:
+          <a
+            href="https://mail.google.com/mail/?tab=rm&ogbl"
+            class="c_link"
+            target="_blank"
+            >yotavishtayal@gmail.com</a
+          >
+        </p> -->
+
+      <!-- </footer> -->
+
+  
+      
     </div>
-    <!-- <div class="note">Note! it also counts spaces</div> -->
-    <button class="btn" onclick="txt()">Submit</button>
-    <div class="alltxt">
-      <div class="show"></div>
-      <div class="showspace"></div>
-      <div class="onlyspace"></div>
-    </div>
-    <footer class="end">
-      <p class="m">Made By: TechCorp(Tavish Tayal)</p>
-      <p class="c">
-        Contact Us:
-        <a
-          href="https://mail.google.com/mail/?tab=rm&ogbl"
-          class="c_link"
-          target="_blank"
-          >yotavishtayal@gmail.com</a
-        >
-      </p>
-    </footer>
-  </div>
   </body>
   <script src="index.js"></script>
 </html>
