--- a/index.html
+++ b/index.html
@@ -25,18 +25,8 @@
   </head>
   <body>
     <div class="nav"><h1 class="text1">Text Analyzer</h1></div>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7578886708336265"
-     crossorigin="anonymous"></script>
-<!-- Text ads -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-7578886708336265"
-     data-ad-slot="9253455716"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+    
+
     <div class="bapu">
       <div class="intparent">
         <input type="text" class="int" placeholder="Text Here" />
@@ -61,7 +51,18 @@
         </p> -->
 
       <!-- </footer> -->
-
+        <footer>
+          <!-- Text ads -->
+<ins class="adsbygoogle"
+style="display:block"
+data-ad-client="ca-pub-7578886708336265"
+data-ad-slot="9253455716"
+data-ad-format="auto"
+data-full-width-responsive="true"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+        </footer>
   
       
     </div>
