--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7578886708336265"
      crossorigin="anonymous"></script>
+    <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7578886708336265"
+     crossorigin="anonymous"></script> -->
+     <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7578886708336265"
+     crossorigin="anonymous"></script> -->
     <meta
       name="description"
       content="Welcome to our Text-Analyzer which could help you by repairing your text in various forms so what are you waiting for ITS FREE!"
