--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7578886708336265"
-     crossorigin="anonymous"></script>
+    <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7578886708336265" -->
+     <!-- crossorigin="anonymous"></script> -->
     <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7578886708336265"
      crossorigin="anonymous"></script> -->
      <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7578886708336265"
@@ -55,18 +55,7 @@
         </p> -->
 
       <!-- </footer> -->
-        <footer>
-          <!-- Text ads -->
-<ins class="adsbygoogle"
-style="display:block"
-data-ad-client="ca-pub-7578886708336265"
-data-ad-slot="9253455716"
-data-ad-format="auto"
-data-full-width-responsive="true"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-        </footer>
+ 
   
       
     </div>
