--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
 
   </head>
   <body>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HN2SF7FLFZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HN2SF7FLFZ');
+</script>
     <div class="nav"><h1 class="text1">Text Analyzer</h1></div>
     
 
